--- a/template/duplicate_products.html
+++ b/template/duplicate_products.html
@@ -1,7 +1,7 @@
 <html>
    <body>
       <form action = "http://localhost:5000/" method = "GET" enctype = "multipart/form-data">
-        <p>Couldn't find any file please try again <p>
+        <p>The file contains dublicates. Try again <p>
          <input type = "submit" value = "Back" />
       </form>
    </body>
